chore(node_modules): fix express version to 3
Update to version 4 of express is breaking examples, so we fix our
examples to third version

--- a/chat/package.json
+++ b/chat/package.json
@@ -6,7 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "*",
+    "express": "^3.4.8",
     "jade": "*",
     "stylus": "*",
     "share": "^0.6.3"
