--- a/sharedWorkspaceWithRacer/package.json
+++ b/sharedWorkspaceWithRacer/package.json
@@ -8,6 +8,11 @@
   "dependencies": {
     "express": "^3.4.8",
     "jade": "*",
+    "livedb-mongo": "^0.3.1",
+    "racer": "^0.5.14",
+    "racer-browserchannel": "^0.1.1",
+    "redis": "^0.10.1",
+    "socket.io-client": "^0.9.17",
     "stylus": "*"
   }
 }
